deployments/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jeroendvwa-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/jeroendvwa-network: "true"
  podSelector:
    matchLabels:
      network/jeroendvwa-network: "true"
